CSS_files/store.css
* {
    margin: 0;
    font-weight: 400;
}

body {
    background-color: #e4e4e4;
    padding-top: 10px;
}

header {
    margin: 10px;
    margin-left: 5%;
    font-family: Arial, Helvetica, sans-serif;
}

h1 {
    font-size: 1.8em;
}

main {
    margin: 20px auto;
    width: 90%;
    padding: 10px;
    padding-bottom: 20px;
    background-color: white;
    border-radius: 5px;
}

#image-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
}

#image-container input {
    vertical-align: top;
    margin-right: 5px;
}

#image-container img, #choose-image img {
    margin-right: 20px;
    margin-bottom: 10px;
    /*
    height: calc(1vw * 15);
    width: calc(1.618vw * 15);
    */
}

.group {
    display: inline-block;
    white-space: nowrap;
    overflow: auto;
}

li {
    font-family: Arial, Helvetica, sans-serif;
    margin: 10px;
    margin-top: 30px;
}

.step {
    margin: 10px 2px;
}

.step, ::marker {
    font-size: 18px;
}

#link-preview {
    font-family: 'Inconsolata', 'Courier New', Courier, monospace;
    background-color: #eee;
    border-radius: 3px;
    padding: 5px;
    margin: 7px 0;
    display: inline-block;
    word-break: break-all;
    overflow-wrap: break-word;
    word-wrap: break-word;
    -ms-word-break: break-all;
}

input[type="button"] {
    display: block;
    padding: 10px;
    border-radius: 3px;
    border: none;
    width: 71px;
    font-size: 13.3px;
}

input.blue {
    background-color: #1a73e8;
    color: white;
}

input.grey {
    background-color: #d3d3d3;
    color: black;
}

#copy-link-input {
    position: absolute;
    right: 10000px;
}

.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0, 0, 0);
    background-color: rgba(0, 0, 0, 0.4);
}

/* The Close Button */

.close {
    color: #cecece;
    float: right;
    font-size: 28px;
    font-weight: bold;
    z-index: 2;
    cursor: pointer;
    position: fixed;
    top: 10px;
    right: 20px;
}

iframe {
    height: 200px;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100vh;
    width: 100vw;
    overflow-x: hidden;
    position: absolute;
}

#text {
    padding: 10px;
    font-family: 'Inconsolata', 'Courier New', Courier, monospace;
    padding-top: 5px;
}

#chars-left {
    color: #3a3a3a;
    font-size: 13px;
}

footer {
    width: 90%;
    margin: 10px auto;
}

footer * {
    display: inline-block;
}

.v-align {
    vertical-align: middle;
}

#winner {
    position: absolute;
    background-color: rgba(255, 255, 255, .8);
    padding: 2px 5px;
    font-size: 12px;
    color: #585858;
}

#winner-group {
    display: inline-grid;
}

#header-description {
    margin-top: 7px;
}

#snakegif {
    border: 1px solid #a4a4a4;
}

